# paragon-clicker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
scripts/: launch_paragon_clicker.py
src/paragon_clicker/: app.py  d2core.py
