[project]
name = "paragon-clicker"
version = "0.1.0"
description = "Windows board-by-board paragon auto clicker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "psutil>=6.0",
]

[project.scripts]
paragon-clicker = "paragon_clicker.app:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paragon_clicker"]
